update solution task#4 from part3/Stream